--- a/school_web/hackin/templates/teacher_interface.html
+++ b/school_web/hackin/templates/teacher_interface.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <!--    -->
@@ -5,13 +6,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <title>Teacher Home - Schoolify</title>
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static "assets/bootstrap/css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
-        <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" >
+        <link rel="stylesheet" href="{% static "assets/fonts/font-awesome.min.css" %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-        <link rel="stylesheet" href="style.css"> 
+        <link rel="stylesheet" href="{% static "style.css" %}"> 
     </head>
     <body>
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="background-color: black;">
@@ -32,7 +33,7 @@
                     <div class="col offset-lg-8 mx-auto text-center">
                         <h2 class="text-white section-heading">We've got what you need!</h2>
                         <hr class="light my-4">
-                        <p class="text-faded mb-4">Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes are open source, free to download, and easy to use. No strings attached!</p><a class="btn btn-light btn-xl js-scroll-trigger"
+                        <p class="text-faded mb-4"></p><a class="btn btn-light btn-xl js-scroll-trigger"
                             role="button" href="#services">Get Started!</a></div>
                 </div>
             </div>
@@ -53,5 +54,25 @@
                 </div>
             </div>         
         </div>
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <h2 class="section-heading">Let's Get In Touch!</h2>
+                        <hr class="my-4">
+                        <p class="mb-5">Ready to digitalize your school with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto text-center"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
+                        <p>123-456-6789</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
+                        <p><a href="mailto:your-email@your-domain.com">email@example.com</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>    
