solved minor problems

--- a/school_web/hackin/templates/ml1.html
+++ b/school_web/hackin/templates/ml1.html
@@ -107,8 +107,8 @@ chart3.render()
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="nav navbar-nav ml-auto">
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">Details</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="student">School Records</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="ekart">E-store</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'student' %}">School Records</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'cart' %}">E-store</a></li>
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Logout</a></li>
               </ul>
           </div>
