more minor issues resolved

--- a/school_web/hackin/templates/student_interface.html
+++ b/school_web/hackin/templates/student_interface.html
@@ -73,9 +73,9 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#details">Details</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#records">School Records</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="">E-Store</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="ml1.html">Predictor</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="index.html">Logout</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'cart' %}">E-Store</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'ml' %}">Predictor</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'index' %}">Logout</a></li>
                     </ul>
                 </div>
             </div>
