--- a/school_web/hackin/templates/ecart.html
+++ b/school_web/hackin/templates/ecart.html
@@ -20,7 +20,7 @@
                 aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'cart' %}"><i class="fa fa-cart-plus fa-2x"></i></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="{% url 'checkout' %}"><i class="fa fa-cart-plus fa-2x"></i></a></li>
                 </ul>
             </div>
         </div>
